--- a/styles/shows.css
+++ b/styles/shows.css
@@ -588,12 +588,20 @@ ul, a, a:link, a:visited {
 }
 
 @media (min-width: 768px) {
+  #shows {
+    width: 100%;
+  }
+  .shows-container {
+    width: 100%;
+    margin: 1.5rem 1.125rem;
+  }
   .show-card {
     display: flex;
-    justify-content: space-between;
+    justify-content: space-around;
+    width: 95%;
   }
   .showcard-title {
-    width: 100%;
+    width: 90%;
     font-size: 60px;
     font-family: "AvenirNextBold";
     display: flex;
