--- a/styles/shows.scss
+++ b/styles/shows.scss
@@ -495,7 +495,6 @@ ul,a,a:link, a:visited{
         &__title{
         padding: 0 4.5rem;
         width: 70%;
-        // margin-right:100px;
     }
     &__subtitle{
         font-size: $desktop-section-header--size;
@@ -650,19 +649,26 @@ ul,a,a:link, a:visited{
 
 
 @include tablet{
-    // .shows-container{
-    //     padding: 1.5rem 1.125rem;
-    // }
+    #shows{
+        width: 100%;
+        // padding: 1.5rem 1.125rem;
+    }
+    .shows-container{
+        width: 100%;
+        margin: 1.5rem 1.125rem;
+    }
     .show-card{
         display: flex;
-        justify-content: space-between;
+        justify-content: space-around;
+        width:95%;
+        // padding: 1.5rem 1.125rem;
 
     }
     .show-header{
         // display: none;
     }
     .showcard-title{
-        width:100%;
+        width:90%;
         font-size:$desktop-page-header--size;
         font-family: 'AvenirNextBold';
         display: flex;
